* August 9 2006, Kaj de Vos *

Finished the normalization move of GLibC from /usr/glibc2/ to /usr/glibc/.

* July 25 2006, Kaj de Vos *

Finally got NCurses to install the TermInfo database in a staging area during system
building. It moved from /usr/share/terminfo to usr/ncurses/share/terminfo. We'll have
to see if this is a good place for it.

* July 10 2006, Kristian Van Der Vliet *

Added a parallel printer (lp_printer) driver, based on the Linux driver and ported
by Lengyel Sandor <slengyel@chello.hu>

* June 19 2006, Arno Klenke *

The ata busmanager is now more flexible to support non-standard ata hostcontroller drivers

* June 4 2006, Arno Klenke *

GCC4 fixes

* May 25 2006, Kristian Van Der Vliet *

Combined updates from Jan L. Hauffa and Arno Klenke

	o Improved conditionals handling
	o Mutex handling is more compliant
	o pthread_cleanup_push(), pthread_cleanup_pop() implemented & the cleanup
	  handlers are called from pthread_exit()
	o Basic pthread_join() implementation

---- 0.6.1 Released -------------------------------------------------------------------

* May 14 2006, Kristian Van Der Vliet *

Some Maestro bug fixes:
	o Don't return IRQRET_BREAK from the IRQ handler
	o Return usable data from SNDCTL_DSP_GETOSPACE ioctl
	o Page align the DMA buffer so we don't get Bad Noise during playback (This
	  seems to be a habit of mine)

* May 5 2006, Kaj de Vos *

Added binary keymaps from Maritimus. Some of them will still be overwritten by those
that have text versions in the repository, until all issues are sorted out.

				Known issues:
	o	French and Belgian: deadkeys don't respect the shift lock.
	o	Breton and Cherokee: multicharacter keys don't work.
	o	Canadian Multilingual, German 453, Swedish SS-66-22-41: Group key won't work.
	o	Complex scripts and BIDI don't work yet.
	o	CTRL+Shift keys ignored.

				Likely issues:
	o	Portuguese Brazilian: 103rd key, keymap dot, probably won't work: please report.

				Other: