@@ -1,3 +1,8 @@
+* September 3, 2006 Arno Klenke *
+
+Changed the libsyllable icons
+New selection frame
+
 * July 22, 2006 Arno Klenke *
 
 Delay backbuffer to framebuffer blits until all rendering operations are finished
@@ -1156,6 +1161,7 @@ disabled controls.  The following files have been patched:
 
 	The sub-menu arrow is now drawn corretly, and menus which have children
 	are now drawn slightly larger to allow for the arrow.
+
 
 
 
